Stop annoying UI jump when adding/removing tags
This will do until I can restyle the tag input using flexbox/grid...

--- a/Vault/wwwroot/css/src/main.scss
+++ b/Vault/wwwroot/css/src/main.scss
@@ -157,7 +157,7 @@
     font-weight: 700;
     white-space: nowrap;
     border-radius: .25rem;
-    margin-top: .375rem;
+    margin-top: .365rem;
     margin-right: 5px;
     transition: background-color 1600ms ease-in;
 }
